Add optional packet API and integrate support across Fabric and NeoForge networks
Implemented a new OptionalPacketHandler interface and OptionalPackets utility to register and query optional play‑stage packets. Expanded INetworkHelper with methods for these packets, updated Services to lazily load the client helper, added FabricClientNetwork for client‑side handling, and enhanced Fabric applies to use the new optional API. Implemented full optional packet support in NeoForge (registration, client handler handling, and sendability checks). Added test‑mod payload classes and registration logic, plus build‑script properties to disable optional/acquireable packet registration. This enables optional communication channels without imposing connection requirements.